samples/_failures_safe/1761180375_a6ba2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d10aee7.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_1d10aee7.c:130:5: error: expected expression at end of input
  130 |     if (!matrix_init(result, a->cols,
      |     ^~
./samples/SAFE/__tmp_1d10aee7.c:130:5: error: expected declaration or statement at end of input
